# zephyr

./: west.yml
.github/workflows/: clang.yaml  codecov.yaml  twister.yaml
boards/google/dragonclaw/: google_dragonclaw_stm32f412cx.yaml
boards/lairdconnect/bl654_dvk/doc/: bl654_dvk.rst
boards/nxp/mimxrt685_evk/doc/: index.rst
boards/nxp/rd_rw612_bga/: rd_rw612_bga_rw612.yaml
boards/nxp/rd_rw612_bga/doc/: index.rst
drivers/auxdisplay/: Kconfig.itron  Kconfig.jhd1313  auxdisplay_handlers.c  auxdisplay_hd44780.c  auxdisplay_hd44780.h  auxdisplay_itron.c  auxdisplay_jhd1313.c
dts/bindings/auxdisplay/: hit,hd44780.yaml
include/zephyr/drivers/: auxdisplay.h
include/zephyr/net/: net_ip.h  net_pkt.h
samples/bluetooth/central_esp/: CMakeLists.txt  Kconfig  bl654.ld  prj.conf  test.py
samples/bluetooth/central_esp/bl654/: generate.sh  zephyr.ums
samples/bluetooth/central_esp/boards/: bl654_dvk.conf
samples/bluetooth/central_esp/src/: magic.c  main.c
samples/drivers/auxdisplay/: README.rst
samples/drivers/auxdisplay/src/: main.c
samples/net/sockets/dumb_http_server/: sample.yaml
samples/net/sockets/dumb_http_server_mt/: sample.yaml
samples/net/sockets/echo_async/: sample.yaml
samples/net/sockets/echo_async_select/: sample.yaml
samples/net/zperf/: sample.yaml
samples/nvs_settings_timing_test/: CMakeLists.txt  prj.conf
samples/nvs_settings_timing_test/src/: main.c  settings.c  settings.h
subsys/bluetooth/controller/: Kconfig.ll_sw_split
subsys/net/ip/: Kconfig.ipv4  icmpv4.h  ipv4.c  ipv4.h  net_if.c  net_pkt.c  net_private.h
(+5 files in other folders)
